--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
 
-    <title>Vite + React</title>
+    <title>Chirag Rathod</title>
   </head>
   <body>
     <div id="root"></div>
